changes to assets

--- a/aboutus.html
+++ b/aboutus.html
@@ -21,12 +21,12 @@
     <main>
         <section class="selina">
             <h1>Selina Li</h1>
-            <img class="selina-image" src="/assets/selina.png">
+            <img class="selina-image" src="assets/selina.png">
             <p><a href="https://selinal.myportfolio.com/"> Selina</a> is a junior majoring in Media Science. She is interested in user-experience, user-centered design, and storytelling. She grew up in the Boston Chinatown neighborhood and has fond memories eating out, playing, and connecting with people within the community. </p>
         </section>
         <section class="elyana">
             <h1>Elyana Alajmi</h1>
-            <img class="elyana-image" src="/assets/elyana.png">
+            <img class="elyana-image" src="assets/elyana.png">
             <p><a href="https://www.linkedin.com/in/elyana-alajmi/">Elyana</a> is a Public Relations graduate student with a background in Marketing and Finance. She is interested in deepening her understanding of businesses and the client/investor relationship. She’s been in Boston for almost a decade and considers it her home.  </p>
         </section>
         <section class="links">
