--- a/eastboston.html
+++ b/eastboston.html
@@ -27,12 +27,12 @@
             <h2> El Penol is a local, family-run, Colombian restaurant located at 54 Bennington St, Boston, MA 02128 in East Boston. They serve authentic Colombian food, and they’re known for their famous dish, the Bandejo Penol. They are known for a few reasons; food quality, taste, “clean family restaurant,” and exceptional service. They’ve been running this restaurant for 22 years.  </h2>
             <p> I visited El Penol on a Tuesday morning, it was still busy making take-out and dine-in orders, but you can’t tell because they cater to each customer and make them feel like they are part of the “family.” </p>
             <p> The restaurant has clear dividers between each table with a sanitizer at the entrance. People wait to be seated, so everyone can be enjoy their meals safely.</p>
-            <img class="inside1" src="/assets/IMG_1560.png">
+            <img class="inside1" src="assets/IMG_1560.png">
             <p> The first thing you will notice is the authenticity of the place with latin music being played, greeted like you’re family, and the smell of really good food.  </p>
         </div> 
         <div class="profile">
          <h1> About the Business Owner </h1>
-         <img class="agowner" src="/assets/maria-balbin.png" alt="picture of business owner maria balbin">
+         <img class="agowner" src="assets/maria-balbin.png" alt="picture of business owner maria balbin">
          <p> It all started when Marina Balbin left Colombia about 35 years ago to come for the “American Dream” she first arrived in NYC, but that didn’t work. She then arrived  to Boston in 1998 where she got an opportunity to start her business, which is now El Peñol Resturante authentic Colombian cuisine.</p>
         </div>
         <div class="impact">
@@ -50,7 +50,7 @@
          <ul>
             <li><button class="support-AG"> <a href="http://www.elpenolrestaurante.com">Support</a> </button> El Pelon in East Boston. Click the button to get access to the menu and for takeout options. </li>
             <figure>  
-                <img class="takeout" src="/assets/117108314_2579134242189444_2235551365629470503_n.png">
+                <img class="takeout" src="assets/117108314_2579134242189444_2235551365629470503_n.png">
                 <figcaption>The famous Bandejo Penol</figcaption>
             </figure>
             <li><button class="support-AG"> <a href="https://hispanicstar.org/donate/">Donate</a> </button> to the Hispanic Star Relief Fund. Funds will be distributed to Latinx community members and small businesses around the country in need. Click the button to donate. </li>
