--- a/chinatown.html
+++ b/chinatown.html
@@ -26,12 +26,12 @@
     <div class="introduction">
         <h2> Asian Garden is a seafood restaurant on 28 Harrison Ave in Boston’s Chinatown. Although it is famous for seafood, like walnut shrimp, lobster with ginger and scallions, deep fried flounder, the restaurant also serves traditional Cantonese, Hong Kong, and Szechuan cuisines. </h2>
         <p> When I walked inside Asian Garden on a late Friday afternoon, I saw people eating late lunches and early dinners around round tables. Colorful dividers were placed between tables to promote social distancing. A Chinese drama blared from a small, propped television. The bell notifying incoming customers enter would occasionally ring. </p>
-        <img class="inside1" src="/assets/inside of restaurant.png">
+        <img class="inside1" src="assets/inside of restaurant.png">
         <p> However, business was still stagnant and it was clear that the small family-owned restaurant was struggling to keep up against the brunt of the pandemic and the increasing rise of Asian hate crimes. </p>
     </div> 
     <div class="profile">
      <h1> About the Business Owner </h1>
-     <img class="agowner" src="/assets/ownerkawa.png" alt="picture of business owner kawa">
+     <img class="agowner" src="assets/ownerkawa.png" alt="picture of business owner kawa">
      <p> The owner's name of Asian Garden is Ka Wa. He immigrated from Hong Kong in 1993. Shortly after, he started his business and has been working with his family ever since.</p>
      <p> When I asked him why he started his restaurant, he responded <span>“Because it is my passion”</span>.</p>
      <p> During our phone interview, he kindly shared his experiences with me. Occasionally, he would call out an order for the kitchen to take. I could tell he was a busy man who worked extremely hard. </p>
@@ -49,7 +49,7 @@
      <ul>
          <li><button class="support-AG"> <a href="https://www.asiangardenboston.com/">Support</a> </button> Asian Garden in Chinatown. Click the button to get access to the menu and for takeout options. </li>
              <figure>  
-                 <img class="takeout" src="/assets/IMG_3527 2.png">
+                 <img class="takeout" src="assets/IMG_3527 2.png">
                  <figcaption>Walnut Shrimp and Stir Fry Beef with Peppers</figcaption>
              </figure>
          <li><button class="support-AG"> <a href="https://donorbox.org/covid19-relief-fund?fbclid=IwAR1W0ywfhh41hw2R62c_p0AXBToPrHEiDyc71O3WK96nsIR6TYql4T7Dzk4">Donate</a> </button> to the Asian Community Emergency Relief Fund. Funds will be distributed to Asian community members in need. Click the button to donate. </li>
