added to media queries

--- a/aboutus.html
+++ b/aboutus.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles/aboutus.css">
+    <link rel="stylesheet" href="styles/style.css">
     <script href="scripts/script.js" defer></script>
     <title>About Us</title>
   </head>
@@ -11,26 +11,28 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">Centering Communities During COVID</a></li>
-                <li><a href="aboutus.html">About Us</a></li>
+                <li><a class="nav-links" href="index.html">Centering Communities During COVID</a></li>
+                <li><a class="nav-links" href="aboutus.html">About Us</a></li>
             </ul>
         </nav>
         <h1 class="about-us">About Us</h1>
         <div class="block2"> </div>
         <div class="block"> </div>
     </header>
-    <main>
-        <section class="selina">
-            <h1>Selina Li</h1>
-            <img class="selina-image" src="assets/selina.png">
-            <p><a href="https://selinal.myportfolio.com/"> Selina</a> is a junior majoring in Media Science. She is interested in user-experience, user-centered design, and storytelling. She grew up in the Boston Chinatown neighborhood and has fond memories eating out, playing, and connecting with people within the community. </p>
-        </section>
-        <section class="elyana">
-            <h1>Elyana Alajmi</h1>
-            <img class="elyana-image" src="assets/elyana.png">
-            <p><a href="https://www.linkedin.com/in/elyana-alajmi/">Elyana</a> is a Public Relations graduate student with a background in Marketing and Finance. She is interested in deepening her understanding of businesses and the client/investor relationship. She’s been in Boston for almost a decade and considers it her home.  </p>
-        </section>
-        <section class="links">
+    <main class="aboutus-main">
+        <div class="bios">
+            <section class="selina">
+                <h1>Selina Li</h1>
+                <img class="selina-image" src="assets/selina.png">
+                <p><a href="https://selinal.myportfolio.com/"> Selina</a> is a junior majoring in Media Science. She is interested in user-experience, user-centered design, and storytelling. She grew up in the Boston Chinatown neighborhood and has fond memories eating out, playing, and connecting with people within the community. </p>
+            </section>
+            <section class="elyana">
+                <h1>Elyana Alajmi</h1>
+                <img class="elyana-image" src="assets/elyana.png">
+                <p><a href="https://www.linkedin.com/in/elyana-alajmi/">Elyana</a> is a Public Relations graduate student with a background in Marketing and Finance. She is interested in deepening her understanding of businesses and the client/investor relationship. She’s been in Boston for almost a decade and considers it her home.  </p>
+            </section>
+        </div>
+        <section class="doc-links">
             <h1> Class Documents </h1>
             <p> <a href="https://docs.google.com/document/d/1dHH26H-0xLW40eapRAgPV_ryzTQf5ZO3TOdL3QGb_N0/edit?usp=sharing">Project Plan</a> </p>
             <p> <a href="https://drive.google.com/file/d/1zU474tYxmlTBHQbaAgeji107JcmOnXIc/view?usp=sharing">Wireframe</a> </p>
