--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <header>
         <nav>
     <ul>
-      <li><a href="index.html">Centering Communities During COVID</a></li>
-      <li><a href="aboutus.html">About Us</a></li>
+      <li><a class="nav-links" href="index.html">Centering Communities During COVID</a></li>
+      <li><a class="nav-links" href="aboutus.html">About Us</a></li>
     </ul>
   </nav>
         <div class="container">
-            <h1> The <span>Impact of COVID-19</span> on Boston Minority Businesses </h1>
+            <h1 class="front-page-header"> The <span>Impact of COVID-19</span> on Boston Minority Businesses </h1>
             <div class="foo"></div>
         </div>
     </header>  
