--- a/chinatown.html
+++ b/chinatown.html
@@ -11,8 +11,8 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">Centering Communities During COVID</a><strong></strong></li>
-                <li><a href="aboutus.html">About Us</a></li>
+                <li><a class="nav-links" href="index.html">Centering Communities During COVID</a><strong></strong></li>
+                <li><a class="nav-links" href="aboutus.html">About Us</a></li>
             </ul>
         </nav>
         <div class="ag-name">
