--- a/eastboston.html
+++ b/eastboston.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles/eastboston.css">
+    <link rel="stylesheet" href="styles/style.css">
     <script href="scripts/script.js" defer></script>
     <title>The Impact of COVID-19: El Pelon in East Boston</title>
   </head>
@@ -25,7 +25,9 @@
 
     <main>
         <div class="introduction">
-            <h2> El Penol is a local, family-run, Colombian restaurant located at 54 Bennington St, Boston, MA 02128 in East Boston. They serve authentic Colombian food, and they’re known for their famous dish, the Bandejo Penol. They are known for a few reasons; food quality, taste, “clean family restaurant,” and exceptional service. They’ve been running this restaurant for 22 years.  </h2>
+            <h2> El Penol is a local, family-run, Colombian restaurant located at 54 Bennington St, Boston, MA 02128 in East Boston.
+            <h2>They serve authentic Colombian food, and they’re known for their famous dish, the Bandejo Penol. </h2> 
+            <h2>They are known for a few reasons; food quality, taste, “clean family restaurant,” and exceptional service. They’ve been running this restaurant for 22 years. </h2>  
             <p> I visited El Penol on a Tuesday morning, it was still busy making take-out and dine-in orders, but you can’t tell because they cater to each customer and make them feel like they are part of the “family.” </p>
             <p> The restaurant has clear dividers between each table with a sanitizer at the entrance. People wait to be seated, so everyone can be enjoy their meals safely.</p>
             <img class="inside1" src="assets/IMG_1560.png">
@@ -44,7 +46,7 @@
          <p>El Penol quickly closed down their restaurant to ensure everyone’s safety, especially since Marina was working 7 days every week.</p>
          <p>It was hard on everyone, and Johan saw it first-hand when they only talked to his grandmother through the phone. Thankfully, El Penol was and still is busy throughout the whole pandemic. </p>
          <p>The Latinx community in the Boston and the greater Boston area has been supportive to each other and to Latinx businesses. </p>
-         <blockquote class="blockquote"> “Us Latinos help each other a lot and support one another, we are all here for one goal which is to give our family a better life and strive and stick together to reach that goal.” – Johan Medina, El Penol’s manager and grandson of Marina’s. </blockquote>
+         <blockquote class="restaurant-blockquote"> “Us Latinos help each other a lot and support one another, we are all here for one goal which is to give our family a better life and strive and stick together to reach that goal.” – Johan Medina, El Penol’s manager and grandson of Marina’s. </blockquote>
         </div> 
         <div class="support"> 
          <h1>Here's How You Can Help</h1>
@@ -60,7 +62,7 @@
          </ul>
         
         </div>
-        <div class="foo blue"> </div>
+        <div class="foo-eb blue"> </div>
      </main>
  </body>
  
