--- a/chinatown.html
+++ b/chinatown.html
@@ -47,7 +47,7 @@
     </div> 
     <div class="support"> 
      <h1>Here's How You Can Help</h1>
-     <ul>
+     <ul class= "restaurant-support">
          <li><button class="support-AG"> <a href="https://www.asiangardenboston.com/">Support</a> </button> Asian Garden in Chinatown. Click the button to get access to the menu and for takeout options. </li>
              <figure>  
                  <img class="takeout" src="assets/IMG_3527 2.png">
@@ -58,7 +58,7 @@
          <li><button class="support-AG"> <a href="eastboston.html"> Learn </a> </a> </button> more about other local minority businesses. Read about El Pleon, a Latinx restaurant in East Boston. </li>
      </ul>
     </div>
-    <div class="foo blue"> </div>
+    <div class="foo-ag blue"> </div>
  </main>
 
 <footer></footer>
