--- a/eastboston.html
+++ b/eastboston.html
@@ -31,7 +31,7 @@
             <p> I visited El Penol on a Tuesday morning, it was still busy making take-out and dine-in orders, but you can’t tell because they cater to each customer and make them feel like they are part of the “family.” </p>
             <p> The restaurant has clear dividers between each table with a sanitizer at the entrance. People wait to be seated, so everyone can be enjoy their meals safely.</p>
             <img class="inside1" src="assets/IMG_1560.png">
-            <p> The first thing you will notice is the authenticity of the place with latin music being played, greeted like you’re family, and the smell of really good food.  </p>
+            <p> The first thing you will notice is the authenticity of the place with latin music being played, greeted like you’re <span>family</span>, and the smell of <span>really good food.</span>  </p>
         </div> 
         <div class="profile">
          <h1> About the Business Owner </h1>
@@ -42,7 +42,7 @@
          <h1> Adapting to the Pandemic </h1>
          <p> Before the pandemic, El Pelon was doing business normally. The pandemic only ever affected it by implementing the rules and regulations for everyone’s safety, and laying off some employees and cutting hours. 
          <p>El Pelon shut their business down for 3 week to adhere to the safety of their employees, families, friends, and the city of Boston. To adjust to the “new norm,” El Pelon requires facemasks, table distancing, hand sanitizer around the dining areas, and social distancing. </p>
-         <p>People were scared and afraid to come out of their houses. The Latinx community carries more essential jobs and they need to work, they can’t depend on not working. They need to find their own way of living to keep food on the table for their families</p>
+         <p>People were <span>scared </span>and <span>afraid </span>to come out of their houses. The Latinx community carries more essential jobs and they need to work, they can’t depend on not working. They need to find their own way of living to keep food on the table for their families</p>
          <p>El Penol quickly closed down their restaurant to ensure everyone’s safety, especially since Marina was working 7 days every week.</p>
          <p>It was hard on everyone, and Johan saw it first-hand when they only talked to his grandmother through the phone. Thankfully, El Penol was and still is busy throughout the whole pandemic. </p>
          <p>The Latinx community in the Boston and the greater Boston area has been supportive to each other and to Latinx businesses. </p>
