changes to media query

--- a/chinatown.html
+++ b/chinatown.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles/chinatown.css">
+    <link rel="stylesheet" href="styles/style.css">
     <script href="scripts/script.js" defer></script>
     <title>The Impact of COVID-19: Asian Garden Restaurant in Chinatown </title>
   </head>
@@ -25,20 +25,21 @@
 
   <main>
     <div class="introduction">
-        <h2> Asian Garden is a seafood restaurant on 28 Harrison Ave in Boston’s Chinatown. Although it is famous for seafood, like walnut shrimp, lobster with ginger and scallions, deep fried flounder, the restaurant also serves traditional Cantonese, Hong Kong, and Szechuan cuisines. </h2>
+        <h2> Asian Garden is a seafood restaurant on 28 Harrison Ave in Boston’s Chinatown. </h2>
+        <h2> Although it is famous for seafood, like walnut shrimp, lobster with ginger and scallions, deep fried flounder, the restaurant also serves traditional Cantonese, Hong Kong, and Szechuan cuisines.</h2>
         <p> When I walked inside Asian Garden on a late Friday afternoon, I saw people eating late lunches and early dinners around round tables. Colorful dividers were placed between tables to promote social distancing. A Chinese drama blared from a small, propped television. The bell notifying incoming customers enter would occasionally ring. </p>
         <img class="inside1" src="assets/inside of restaurant.png">
         <p> However, business was still stagnant and it was clear that the small family-owned restaurant was struggling to keep up against the brunt of the pandemic and the increasing rise of Asian hate crimes. </p>
     </div> 
     <div class="profile">
-     <h1> About the Business Owner </h1>
+     <h3> About the Business Owner </h3>
      <img class="agowner" src="assets/ownerkawa.png" alt="picture of business owner kawa">
      <p> The owner's name of Asian Garden is Ka Wa. He immigrated from Hong Kong in 1993. Shortly after, he started his business and has been working with his family ever since.</p>
      <p> When I asked him why he started his restaurant, he responded <span>“Because it is my passion”</span>.</p>
      <p> During our phone interview, he kindly shared his experiences with me. Occasionally, he would call out an order for the kitchen to take. I could tell he was a busy man who worked extremely hard. </p>
     </div>
     <div class="impact">
-     <h1> Struggling with Multiple Pandemics </h1>
+     <h2> Struggling with Multiple Pandemics </h2>
      <p> During our phone interview, KaWa noted that there was a <span>50%</span> decrease in business due to the pandemic</p>
      <p> Although the state government provided funding to keep workers in local businesses employed through the Paycheck Protection Program (PPP), there was still not enough business to hire workers back. </p>
      <p>KaWa believes that the rise of hate crimes against Asian-Americans due to broader rhetoric about Asian-Americans being responsible for carrying the disease has contributed to the loss in revenue. </p> 
@@ -46,8 +47,8 @@
      <p> KaWa believes that Chinatown has become increasingly dangerous. There were <span>three attempted robberies</span> at the restaurant in the past year and all the windows would be smashed. </p>
     </div> 
     <div class="support"> 
-     <h1>Here's How You Can Help</h1>
-     <ul class= "restaurant-support">
+     <h2>Here's How You Can Help</h2>
+     <ul>
          <li><button class="support-AG"> <a href="https://www.asiangardenboston.com/">Support</a> </button> Asian Garden in Chinatown. Click the button to get access to the menu and for takeout options. </li>
              <figure>  
                  <img class="takeout" src="assets/IMG_3527 2.png">
