changes to html

--- a/eastboston.html
+++ b/eastboston.html
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li><a class="nav-links" href="index.html">Centering Communities During COVID</a></li>
-                <li><a hclass="nav-links" ref="aboutus.html">About Us</a></li>
+                <li><a class="nav-links" href="aboutus.html">About Us</a></li>
             </ul>
         </nav>
         <div class="ag-name">
@@ -47,6 +47,11 @@
          <p> Before the pandemic, El Pelon was doing business normally. The pandemic only ever affected it by implementing the rules and regulations for everyone’s safety, and laying off some employees and cutting hours. 
          <p>El Pelon shut their business down for 3 week to adhere to the safety of their employees, families, friends, and the city of Boston. To adjust to the “new norm,” El Pelon requires facemasks, table distancing, hand sanitizer around the dining areas, and social distancing. </p>
          <p>People were <span>scared </span>and <span>afraid </span>to come out of their houses. The Latinx community carries more essential jobs and they need to work, they can’t depend on not working. They need to find their own way of living to keep food on the table for their families</p>
+         <div class="poc-statistics"> 
+            <h4> Latinx Are Hospitalized From COVID-19 4x More Than White People</h4> 
+            <h4> 26% of COVID-19 Deaths are Latinx </h4>
+            <h4> 50% of the Essential Workforce are Latinx </h4> 
+       </div>
          <p>El Penol quickly closed down their restaurant to ensure everyone’s safety, especially since Marina was working 7 days every week.</p>
          <p>It was hard on everyone, and Johan saw it first-hand when they only talked to his grandmother through the phone. Thankfully, El Penol was and still is busy throughout the whole pandemic. </p>
          <p>The Latinx community in the Boston and the greater Boston area has been supportive to each other and to Latinx businesses. </p>
