--- a/chinatown.html
+++ b/chinatown.html
@@ -47,6 +47,11 @@
      <p> During our phone interview, KaWa noted that there was a <span>50%</span> decrease in business due to the pandemic</p>
      <p> Although the state government provided funding to keep workers in local businesses employed through the Paycheck Protection Program (PPP), there was still not enough business to hire workers back. </p>
      <p>KaWa believes that the rise of hate crimes against Asian-Americans due to broader rhetoric about Asian-Americans being responsible for carrying the disease has contributed to the loss in revenue. </p> 
+     <div class="poc-statistics"> 
+         <h4> Reported Asian Hate Crimes Rose to <span>150%</span> in 2020 </h4> 
+         <h4><i>Stop Asian Hate</i> Reported Nearly 3,800 Incidences of Hate Crimes.</h4> 
+         <h4>Hate Crimes Are Largely Undercounted Due To Language Barriers, Mistrust with Authorities, and Reluctancy to Speak Up.</h4>
+    </div>
      <p> In addition, KaWa has encountered acts of discrimination. People would call the restaurant to direct racial slurs and expletives at the owner. They would also order food but purposely fail to pick it up, which resulted in wasted food and expenses.</p>
      <p> KaWa believes that Chinatown has become increasingly dangerous. There were <span>three attempted robberies</span> at the restaurant in the past year and all the windows would be smashed. </p>
     </div> 
