changes to blockquote, intro header, and video

--- a/chinatown.html
+++ b/chinatown.html
@@ -24,7 +24,7 @@
         <div class="to-restaurant-video"> <video width="50%" height="auto" controls muted>
             <source src="assets/asian garden video.mp4" type="video/mp4">
           Your browser does not support the video tag.
-          </video> <p>en-route to asian garden</p></div>
+          </video> <p class="video-description">en-route to asian garden</p></div>
     </header>
 
   <main>
