--- a/eastboston.html
+++ b/eastboston.html
@@ -24,7 +24,8 @@
         <div class="to-restaurant-video"> <video width="50%" height="auto" controls muted>
             <source src="assets/walking to el polon.mp4" type="video/mp4">
           Your browser does not support the video tag.
-          </video> <p>en-route to el pelon</p></div>
+          </video> <p class="video-description">en-route to el pelon</p>
+        </div>
     </header>
 
     <main>
@@ -55,7 +56,7 @@
          <p>El Penol quickly closed down their restaurant to ensure everyone’s safety, especially since Marina was working 7 days every week.</p>
          <p>It was hard on everyone, and Johan saw it first-hand when they only talked to his grandmother through the phone. Thankfully, El Penol was and still is busy throughout the whole pandemic. </p>
          <p>The Latinx community in the Boston and the greater Boston area has been supportive to each other and to Latinx businesses. </p>
-         <blockquote class="restaurant-blockquote"> “Us Latinos help each other a lot and support one another, we are all here for one goal which is to give our family a better life and strive and stick together to reach that goal.” – Johan Medina, El Penol’s manager and grandson of Marina’s. </blockquote>
+         <blockquote> <img class="quotemark" src="assets/icons8-get-quote-96.png"> “Us Latinos help each other a lot and support one another, we are all here for one goal which is to give our family a better life and strive and stick together to reach that goal.” – Johan Medina, El Penol’s manager and grandson of Marina’s. </blockquote>
         </div> 
         <div class="support"> 
          <h3>Here's How You Can Help</h3>
