--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   </nav>
         <div class="container">
             <h1 class="front-page-header"> The <span>Impact of COVID-19</span> on Boston Minority Businesses </h1>
+            <img class="header-image" src="assets/adam-niescioruk-Z9arfr0f248-unsplash.jpg"> 
             <div class="foo"></div>
         </div>
     </header>  
@@ -61,10 +62,12 @@
         
             <div class="overview-part-3">
                 <p> The pandemic only amplified and exacerbated the real issue: <strong> access to a healthy, happy, high-quality life is not insured for communities of color.</strong> </p>
-                <p> We decided to focus on small businesses of color, many of whom financially struggle to maintain their business and face increasing uncertainty about reopening and going back to “normal.” </p>
+                <p> Our goal is to focus on small businesses of color, many of whom financially struggle to maintain their business and face increasing uncertainty about reopening and going back to “normal.” </p>
                 <p> This website aims to promote dialogue about the disproportionate impacts of COVID-19 on minority businesses. The goal is to spread awareness about local business in the Boston and the greater Boston area and help support their businesses.  </p>
                 <div class="foo3"></div>
-                <blockquote> "The pandemic’s disproportionate impact on minority-owned small businesses is further evidence of systemic inequalities in our country. Even more concerning, the pandemic could exacerbate and elongate the economic struggles already facing minority-owned businesses and families," <br> <cite> -Suzanne P. Clark, president of the U.S. Chamber</cite> </blockquote>
+                <blockquote> <img class="quotemark" src="assets/icons8-get-quote-96.png">
+                    The pandemic’s disproportionate impact on minority-owned small businesses is further evidence of systemic inequalities in our country. Even more concerning, the pandemic could exacerbate and elongate the economic struggles already facing minority-owned businesses and families. <br> <cite> -Suzanne P. Clark, president of the U.S. Chamber</cite>
+                </blockquote>
             </div>
         </div>
 
