changes to html

--- a/eastboston.html
+++ b/eastboston.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles/style.css">
     <script href="scripts/script.js" defer></script>
-    <title>The Impact of COVID-19: El Pelon in East Boston</title>
+    <title>The Impact of COVID-19: El Penol in East Boston</title>
   </head>
 
   <body>  
@@ -16,7 +16,7 @@
             </ul>
         </nav>
         <div class="ag-name">
-            <h1>El Pelon Restaurant</h1>
+            <h1>El Penol Restaurant</h1>
         </div>
         <div class="ag-address">
             <h1>54 Bennington Street Boston, Massachusetts,  02128</h1>
@@ -45,8 +45,8 @@
         </div>
         <div class="impact">
          <h3> Adapting to the Pandemic </h3>
-         <p> Before the pandemic, El Pelon was doing business normally. The pandemic only ever affected it by implementing the rules and regulations for everyone’s safety, and laying off some employees and cutting hours. 
-         <p>El Pelon shut their business down for 3 week to adhere to the safety of their employees, families, friends, and the city of Boston. To adjust to the “new norm,” El Pelon requires facemasks, table distancing, hand sanitizer around the dining areas, and social distancing. </p>
+         <p> Before the pandemic, El Penol was doing business normally. The pandemic only ever affected it by implementing the rules and regulations for everyone’s safety, and laying off some employees and cutting hours. 
+         <p>El Penol shut their business down for 3 week to adhere to the safety of their employees, families, friends, and the city of Boston. To adjust to the “new norm,” El Pelon requires facemasks, table distancing, hand sanitizer around the dining areas, and social distancing. </p>
          <p>People were <span>scared </span>and <span>afraid </span>to come out of their houses. The Latinx community carries more essential jobs and they need to work, they can’t depend on not working. They need to find their own way of living to keep food on the table for their families</p>
          <div class="poc-statistics"> 
             <h4> Latinx Are Hospitalized From COVID-19 4x More Than White People</h4> 
@@ -61,7 +61,7 @@
         <div class="support"> 
          <h3>Here's How You Can Help</h3>
          <ul>
-            <li><button class="support-AG"> <a href="http://www.elpenolrestaurante.com">Support</a> </button> El Pelon in East Boston. Click the button to get access to the menu and for takeout options. </li>
+            <li><button class="support-AG"> <a href="http://www.elpenolrestaurante.com">Support</a> </button> El Penol in East Boston. Click the button to get access to the menu and for takeout options. </li>
             <figure>  
                 <img class="takeout" src="assets/117108314_2579134242189444_2235551365629470503_n.png">
                 <figcaption>The famous Bandejo Penol</figcaption>
