--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <h3> Learn More About the Local Businesses in Boston</h3>
             <div class="cta"> 
                 <button class="chinatown-button"> <a href="chinatown.html">Asian Garden in Chinatown</a> </button>
-                <button class="revere-button"> <a href="eastboston.html">El Pelon in East Boston</a> </button>
+                <button class="revere-button"> <a href="eastboston.html">El Penol in East Boston</a> </button>
             </div>
         </div>
     </main>
