changes to styling

--- a/eastboston.html
+++ b/eastboston.html
@@ -20,6 +20,11 @@
         </div>
         <div class="ag-address">
             <h1>54 Bennington Street Boston, Massachusetts,  02128</h1>
+            <figure>
+                <img class="restaurant-image" src="assets/el peno edit 1.png"> 
+                <figcaption class="rest-image-caption"> the front of the store</figcaption>
+                <img class="restaurant-arrow" src="assets/icons8-forward-arrow-64.png"/>
+            </figure>
         </div>
         <div class="to-restaurant-video"> <video width="50%" height="auto" controls muted>
             <source src="assets/walking to el polon.mp4" type="video/mp4">
