--- a/chinatown.html
+++ b/chinatown.html
@@ -20,6 +20,11 @@
         </div>
         <div class="ag-address">
             <h1>28 Harrison Ave, Boston, MA 02111-2025</h1>
+            <figure>
+                <img class="eb-restaurant-image" src="assets/asian garden restaurant.png"> 
+                <figcaption class="eb-rest-image-caption"> the front of the store</figcaption>
+                <img class="restaurant-arrow-ag" src="assets/icons8-forward-arrow-64.png"/>
+            </figure>
         </div>
         <div class="to-restaurant-video"> <video width="50%" height="auto" controls muted>
             <source src="assets/asian garden video.mp4" type="video/mp4">
@@ -61,7 +66,8 @@
          <li><button class="support-AG"> <a href="https://www.asiangardenboston.com/">Support</a> </button> Asian Garden in Chinatown. Click the button to get access to the menu and for takeout options. </li>
              <figure>  
                  <img class="takeout" src="assets/IMG_3527 2.png">
-                 <figcaption>Walnut Shrimp and Stir Fry Beef with Peppers</figcaption>
+                 <figcaption class="ag-take-out-caption"> Walnut Shrimp and Stir Fry Beef with Peppers</figcaption>
+                 <img class="takeout-arrow-ag" src="assets/icons8-forward-arrow-64.png"/>
              </figure>
          <li><button class="support-AG"> <a href="https://donorbox.org/covid19-relief-fund?fbclid=IwAR1W0ywfhh41hw2R62c_p0AXBToPrHEiDyc71O3WK96nsIR6TYql4T7Dzk4">Donate</a> </button> to the Asian Community Emergency Relief Fund. Funds will be distributed to Asian community members in need. Click the button to donate. </li>
          <li><button class="support-AG"> <a href="https://www.asiangardenboston.com/">Share</a> </button> the word. Click the button share this website on your social media. </li>
